--- a/Wordwise/package.json
+++ b/Wordwise/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "dotenv": "^16.3.1",
     "fetch": "^1.1.0",
     "html-react-parser": "^3.0.16",
     "jsonwebtoken": "^9.0.0",
